--- a/app/src/main/res/layout/activity_player_stats.xml
+++ b/app/src/main/res/layout/activity_player_stats.xml
@@ -20,13 +20,39 @@
         android:spinnerMode="dropdown"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"/>
+    <TableLayout
+        android:id="@+id/positions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/team_spinner">
+
+        <TableRow>
+
+            <AutoCompleteTextView
+                android:id="@+id/position"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Player's Position"
+                android:minHeight="48dp"
+                android:completionThreshold="1" />
+            <ImageView
+                android:id="@+id/searchPos"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="5dp"
+                android:layout_gravity="center"
+                android:src="@drawable/baseline_search_24"/>
+        </TableRow>
+
+    </TableLayout>
 
     <include
         android:id="@+id/headerLayout"
         layout="@layout/header_player_stats"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/team_spinner"/>  <!-- Ensure this layout exists -->
+        app:layout_constraintTop_toBottomOf="@id/positions"/>  <!-- Ensure this layout exists -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewPlayerStats"
         android:layout_width="match_parent"
