--- a/app/src/main/res/layout/activity_player_list.xml
+++ b/app/src/main/res/layout/activity_player_list.xml
@@ -48,19 +48,19 @@
 
             <Button
                 android:id="@+id/btnStart"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:text="Start Half Time" />
 
             <Button
                 android:id="@+id/btnPause"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:text="Extra Time" />
 
             <Button
                 android:id="@+id/btnStop"
-                android:layout_width="wrap_content"
+                android:layout_width="90dp"
                 android:layout_height="wrap_content"
                 android:text="Stop Half Time" />
         </LinearLayout>
