--- a/app/src/main/res/layout/item_standing.xml
+++ b/app/src/main/res/layout/item_standing.xml
@@ -3,29 +3,31 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="8dp">
+    android:padding="5dp">
 
-    <TextView
-        android:id="@+id/positionTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="0.65"
-        android:text="1"
-        android:layout_marginEnd="0.5dp"/>
+<!--    <TextView-->
+<!--        android:id="@+id/positionTextView"-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_weight="0.65"-->
+<!--        android:text="1"-->
+<!--        android:layout_marginEnd="0.5dp"/>-->
 
     <TextView
         android:id="@+id/teamNameTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="2.5"
+        android:layout_weight="2.2"
         android:text="Team Name"
-        android:layout_marginEnd="2dp"/>
+        android:gravity="start"
+        android:layout_marginEnd="1dp"/>
 
     <TextView
         android:id="@+id/mpTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.65"
+        android:layout_weight="0.75"
+        android:gravity="start"
         android:text="0" />
 
     <TextView
@@ -33,6 +35,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.65"
+        android:gravity="start"
         android:text="0" />
 
     <TextView
@@ -40,6 +43,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.65"
+        android:gravity="center"
         android:text="0" />
 
     <TextView
@@ -47,34 +51,47 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="0.65"
+        android:gravity="center"
         android:text="0" />
 
     <TextView
         android:id="@+id/gfTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.65"
+        android:layout_weight="0.75"
+        android:gravity="center"
+        android:paddingEnd="4dp"
+
         android:text="0" />
 
     <TextView
         android:id="@+id/gaTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.65"
+        android:layout_weight="0.75"
+        android:gravity="center"
+        android:paddingEnd="4dp"
+
         android:text="0" />
 
     <TextView
         android:id="@+id/gdTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.65"
+        android:layout_weight="0.75"
+        android:gravity="center"
+        android:paddingEnd="4dp"
+
         android:text="0" />
 
     <TextView
         android:id="@+id/pointsTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.65"
+        android:layout_weight="0.75"
+        android:gravity="center"
+
+
         android:text="0" />
 
 </LinearLayout>
