--- a/app/src/main/res/layout/item_standing_header.xml
+++ b/app/src/main/res/layout/item_standing_header.xml
@@ -4,31 +4,35 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="8dp"
-    android:background="#DDDDDD">
+    android:backgroundTint="#E0E0E0"
+    android:background="#FF3700B3"
+    >
+
+
+<!--    <TextView-->
+<!--        android:layout_width="0dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_weight="0.7"-->
+<!--        android:text="Pos"-->
+<!--        android:textStyle="bold"-->
+<!--        android:gravity="center"-->
+<!--        android:padding="4dp"-->
+<!--        android:singleLine="true"/>-->
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.7"
-        android:text="Pos"
-        android:textStyle="bold"
-        android:gravity="center"
-        android:padding="4dp"
-        android:singleLine="true"/>
-
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="2.5"
+        android:layout_weight="2.0"
         android:text="Team Name"
+
         android:textStyle="bold"
-        android:gravity="center"
+
         android:padding="4dp" />
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.65"
+        android:layout_weight="0.75"
         android:text="MP"
         android:textStyle="bold"
         android:gravity="center"
@@ -64,16 +68,17 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.65"
+        android:layout_weight="0.75"
         android:text="GF"
         android:textStyle="bold"
         android:gravity="center"
-        android:padding="4dp" />
+        android:padding="4dp"
+        />
 
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.65"
+        android:layout_weight="0.75"
         android:text="GA"
         android:textStyle="bold"
         android:gravity="center"
@@ -82,7 +87,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.65"
+        android:layout_weight="0.75"
         android:text="GD"
         android:textStyle="bold"
         android:gravity="center"
@@ -91,7 +96,7 @@
     <TextView
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.65"
+        android:layout_weight="0.75"
         android:text="Pts"
         android:textStyle="bold"
         android:gravity="center"
