--- a/app/src/main/res/drawable/rectangular_background.xml
+++ b/app/src/main/res/drawable/rectangular_background.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#FFFFFF"/> <!-- Solid white background -->
-    <corners android:radius="8dp"/> <!-- Rounded corners -->
-    <stroke android:color="#000000" android:width="1dp"/> <!-- Black border -->
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#B3FFFFFF" /> <!-- 70% opaque white -->
+    <corners android:radius="12dp" />
+    <padding android:left="8dp" android:top="8dp" android:right="8dp" android:bottom="8dp"/>
 </shape>
