--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,8 +19,8 @@
         android:id="@+id/recyclerViewMatches"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:alpha="0.7"
-        android:background="@color/white"
+
+        android:background="@android:color/transparent"
         android:clipToPadding="false"
         android:padding="16dp"
         android:scrollbars="vertical"
@@ -29,22 +29,66 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:layout_constraintVertical_bias="0.0" />
+    <LinearLayout
+        android:id="@+id/emptyStateContainer"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="center"
+        android:visibility="gone"
+        android:background="#AA000000"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/emptyAnimationView"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            app:lottie_autoPlay="true"
+            app:lottie_loop="true"
+            app:lottie_fileName="footballer.json" />
+
+
+
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Welcome!"
+            android:textColor="@color/white"
+            android:textSize="22sp"
+            android:textStyle="bold"
+            android:layout_marginTop="16dp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="There are no matches today.\nFeel free to check other sections."
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:textSize="16sp"
+            android:layout_marginTop="8dp"
+            android:gravity="center"/>
+
+    </LinearLayout>
+
 
     <!-- "No Match Today" TextView -->
     <!-- "No Match Today" TextView -->
-    <TextView
-        android:id="@+id/noMatchesTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="No match today"
-        android:textSize="18sp"
-        android:textColor="@color/black"
-        android:visibility="gone"
-        app:layout_constraintTop_toTopOf="@+id/recyclerViewMatches"
-        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewMatches"
-        app:layout_constraintStart_toStartOf="@+id/recyclerViewMatches"
-        app:layout_constraintEnd_toEndOf="@+id/recyclerViewMatches" />
+<!--    <TextView-->
+<!--        android:id="@+id/noMatchesTextView"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:gravity="center"-->
+<!--        android:text="No match today"-->
+<!--        android:textSize="18sp"-->
+<!--        android:textColor="@color/black"-->
+<!--        android:visibility="gone"-->
+<!--        app:layout_constraintTop_toTopOf="@+id/recyclerViewMatches"-->
+<!--        app:layout_constraintBottom_toBottomOf="@+id/recyclerViewMatches"-->
+<!--        app:layout_constraintStart_toStartOf="@+id/recyclerViewMatches"-->
+<!--        app:layout_constraintEnd_toEndOf="@+id/recyclerViewMatches" />-->
 
     <!-- Round + Button -->
     <Button
