--- a/app/src/main/res/layout/item_match.xml
+++ b/app/src/main/res/layout/item_match.xml
@@ -11,8 +11,9 @@
         android:id="@+id/matchId"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Match ID"
+        android:text="Match ID:Match ID"
         android:textStyle="bold"
+        android:textColor="@color/black"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
