--- a/app/src/main/res/layout/item_player_stat.xml
+++ b/app/src/main/res/layout/item_player_stat.xml
@@ -13,8 +13,9 @@
         android:layout_marginStart="0dp"
 
         android:text="Player Name"
-        android:ellipsize="end"
+        android:ellipsize="start"
         android:singleLine="false"
+        android:gravity="start"
         android:layout_marginEnd="0.5dp"/>
 
     <!-- Position: Slightly less space -->
@@ -26,6 +27,7 @@
         android:text="Position"
         android:ellipsize="end"
         android:singleLine="false"
+        android:gravity="start"
         android:layout_marginEnd="0.5dp"/>
 
     <!-- Team Name: Similar space to Position -->
@@ -37,6 +39,7 @@
         android:text="Team Name"
         android:ellipsize="end"
         android:singleLine="false"
+        android:gravity="start"
         android:layout_marginEnd="0.5dp"/>
 
     <!-- Integer stats: Compact space -->
@@ -44,7 +47,7 @@
         android:id="@+id/mpTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_weight="0.75"
+        android:layout_weight="0.8"
         android:gravity="center"
         android:text="0" />
 
